# opengl-experiments

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Doxyfile  LICENSE.txt  Makefile  README.md  README.txt  build.bat  build.sh  build_sdk.bat  build_sdk.sh  cpplint.py  premake4.lua
data/: Cube.blend  ModelWorldCameraClip.vert  PassthroughColor.frag  cockpit.blend  cockpit.dae  cube.dae  hierarchy.blend  hierarchy.dae  import.txt  plane.blend  plane.dae  suzanne.dae  teapot.dae  teapot_flat.dae
src/: App.cpp  App.h  Main.cpp  main.cpp
src/Main/: App.cpp  App.h  Input.cpp  Input.h  Main.cpp  MatrixStack.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  OculusHMD.cpp  OculusHMD.h  OculusHMDImpl.cpp  OculusHMDImpl.h  Physic.cpp  Physic.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  ShaderProgram.cpp  ShaderProgram.h
src/Utils/: Exception.h  FPS.cpp  FPS.h  Formatter.h  Measure.h  String.h  Time.cpp  Time.h  Timer.cpp  Timer.h  Utils.h  shared_ptr.hpp
